--- a/src/layouts/DesignLayout.astro
+++ b/src/layouts/DesignLayout.astro
@@ -1,8 +1,8 @@
 ---
 const { title = "Dev Page" } = Astro.props;
 import '../scss/main.scss';
-import Nav from '../components/Nav.astro';
-import Footer from '../components/Footer.astro';
+import Nav from '../components/design/Nav.astro';
+import Footer from '../components/design/Footer.astro';
 ---
 <html>
   <head>
