--- a/src/layouts/ProductionLayout.astro
+++ b/src/layouts/ProductionLayout.astro
@@ -16,8 +16,8 @@ const {
 } = Astro.props;
 
 import '../scss/main.scss';
-import Nav from '../components/Nav.astro';
-import Footer from '../components/Footer.astro';
+import Nav from '../components/design/Nav.astro';
+import Footer from '../components/design/Footer.astro';
 ---
 
 <html lang="en">
