--- a/src/pages/design/example-page.astro
+++ b/src/pages/design/example-page.astro
@@ -1,6 +1,6 @@
 ---
 import DesignLayout from '../../layouts/DesignLayout.astro';
-import HeroSection from '../../components/HeroSection.astro';
+import HeroSection from '../../components/design/HeroSection.astro';
 ---
 <DesignLayout>
   <HeroSection />
