--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,7 +25,8 @@
 @use 'components/example-checkbox';
 @use 'components/example-floating-labels';
 @use 'components/example-modal';
-@use 'components/example-hero-slider';
+@use 'components/hero-slider';
+@use 'components/hero-slider-2';
 @use 'components/clients';
 @use 'components/community';
 @use 'components/split-section';
