--- a/src/scss/components/_community.scss
+++ b/src/scss/components/_community.scss
@@ -9,24 +9,18 @@
     align-items: center;
     gap: 8px;
   }
-
+  
   &__title {
     width: 542px;
     color: $color-neutral-dark-grey;
-    text-align: center;
-    font-family: $font-family-primary;
-    font-size: 36px;
-    font-weight: 600;
-    line-height: 44px;
     margin-bottom: 0;
     
     @media (max-width: $md) {
       width: 100%;
-      font-size: 28px;
-      line-height: 36px;
+      
     }
   }
-
+  
   &__subtitle {
     color: $color-neutral-grey;
     text-align: center;
@@ -35,23 +29,23 @@
     font-weight: 400;
     line-height: 24px;
   }
-
+  
   &__content {
-    padding: 0 144px;
+    // padding: 0 144px;
     
-    @media (max-width: $xl) {
-      padding: 0 80px;
-    }
+    // @media (max-width: $xl) {
+    //   padding: 0 80px;
+    // }
     
-    @media (max-width: $lg) {
-      padding: 0 40px;
-    }
+    // @media (max-width: $lg) {
+    //   padding: 0 40px;
+    // }
     
-    @media (max-width: $md) {
-      padding: 0 20px;
-    }
+    // @media (max-width: $md) {
+    //   padding: 0 20px;
+    // }
   }
-
+  
   &__card-list {
     display: flex;
     justify-content: space-between;
@@ -63,7 +57,7 @@
       gap: 20px;
     }
   }
-
+  
   &__card {
     display: flex;
     width: 299px;
@@ -87,7 +81,7 @@
       max-width: 400px;
     }
   }
-
+  
   &__card-header {
     display: flex;
     flex-direction: column;
@@ -95,13 +89,13 @@
     gap: 16px;
     margin-bottom: 8px;
   }
-
+  
   &__icon {
     width: 65px;
     height: 56px;
     object-fit: contain;
   }
-
+  
   &__card-title {
     color: $color-neutral-dark-grey;
     text-align: center;
@@ -116,7 +110,7 @@
       line-height: 32px;
     }
   }
-
+  
   &__card-description {
     color: $color-neutral-grey;
     text-align: center;
