add button-to-link and mobile-first rules to component guidelines

--- a/src/components/design/BlogPreview.astro
+++ b/src/components/design/BlogPreview.astro
@@ -53,11 +53,11 @@ const {
                 <img src={blog.image} alt={blog.imageAlt} class="blog-preview__image">
                 <div class="blog-preview__card-content">
                   <h3 class="blog-preview__card-title">{blog.title}</h3>
-                  <div class="blog-preview__card-link">
+                  <a href="#" class="blog-preview__card-link">
                     <span class="blog-preview__link-text">Readmore</span>
                     <svg class="blog-preview__link-icon" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"> <path d="M11.2503 11.0002L13.7201 8.53051C14.013 8.23761 14.013 7.76272 13.7201 7.46982L11.2503 5.00009M13.5004 8.00017L2.50012 8.00017" stroke="currentColor" stroke-width="1.1" stroke-linecap="round"></path> </svg>
                     {/* <img src="/icons/arrow-up-right-from-square-solid-full.svg" alt="Arrow" class="blog-preview__link-icon"> */}
-                  </div>
+                  </a>
                 </div>
               </div>
             </div>
