--- a/src/components/design/SplitSection.astro
+++ b/src/components/design/SplitSection.astro
@@ -33,9 +33,9 @@ const {
         </div>
         
         <div class="split-section__actions">
-          <button class="btn btn-primary split-section__btn">
+          <a href="#"  class="btn btn-primary split-section__btn">
             {buttonText}
-          </button>
+          </a>
         </div>
       </div>
     </div>
