--- a/src/components/design/Testimonial.astro
+++ b/src/components/design/Testimonial.astro
@@ -43,10 +43,10 @@
             </div>
           </div>
           
-          <div class="testimonial__cta">
+          <a href="#" class="testimonial__cta">
             <span class="testimonial__cta-text">Meet all customers</span>
             <img src="/icons/arrow-up-right-from-square-solid-full.svg" alt="Arrow" class="testimonial__cta-icon">
-          </div>
+          </a>
         </div>
       </div>
     </div>
