--- a/src/scss/components/_blog-preview.scss
+++ b/src/scss/components/_blog-preview.scss
@@ -125,6 +125,7 @@
     cursor: pointer;
     transition: $transition-normal;
     border-radius: $border-radius-sm;
+    text-decoration: none;
     
     &:hover {
       background-color: rgba($color-brand-primary, 0.1);
